# mcp-in-action

./: .env  .gitignore  README.md
mcp-demo/: .env  .env.example  README.md  requirements.txt  run.sh
mcp-demo/client/: .env  mcp_client_langchain.py  mcp_client_langchain_chat.py
mcp-demo/server/: weather_server.py
mcp-rag/: .gitignore  README.md  mcprag.sh
mcp-rag/bak-milvus-mcp-client/: README.md  client_chunk.py  client_config.py  import_file.py  knowledge_manager.py  requirements.txt  run.sh  test.md
mcp-rag/bak-milvus-mcp-server/: docker-compose.yml  requirements.txt  run.sh
mcp-rag/bak-milvus-mcp-server/app/: __init__.py  dependencies.py
mcp-rag/mcp-client/: README(PYTHON).md  import_file.py
mcp-rag/mcp-server/: Dockerfile  README-zh.md  README.md  pyproject.toml  requirements.txt  run.sh
mcp-rag/mcp-server/src/: embedding.py  main.py  milvus_connector.py  models.py  server.py  settings.py
mcp-rag/mcp-server/volumes/etcd/member/snap/: db
mcp-rag/mcp-server/volumes/milvus/rdb_data/: IDENTITY  LOG
mcp-rag/mcp-server/volumes/milvus/rdb_data_meta_kv/: IDENTITY  LOG
mcp-rag/mcp-server/volumes/minio/.minio.sys/: format.json
mcp-rag/milvus-mcp-client/: .env.example  README.md  knowledge_manager.py  requirements.txt  run.sh
mcp-rag/milvus-mcp-server/: .env.template  Dockerfile  MCP-API-测试文档.md  MCP-Tools-测试文档.md  README-zh.md  README.md  docker-compose.yml  requirements.txt
mcp-rag/tablestore-mcp-server/: README(JAVA).md  pom.xml
mcp-rag/tablestore-python-mcp-server/: .gitignore  README.md  README_pypi.md  pyproject.toml
mcp-rag/tablestore-python-mcp-server/src/tablestore_mcp_server/: main.py  server.py  settings.py  tablestore_connector.py
mcp-rag/tablestore-python-mcp-server/src/tablestore_mcp_server/embedding/: provider.py  type.py
mcp-rag/tablestore-python-mcp-server/tests/: test_embeddings.py  test_settings.py  test_tablestore.py
mcp-rag/talesstore-mcp-client/: README(PYTHON).md  client_chunk.py  client_config.py  knowledge_manager.py  pdf_to_markdown.py  requirements.txt  run.sh  tablestore_vector.md
mcp_demo/: .env  README.md  requirements.txt  run.sh
mcp_demo/client/: mcp_client.py  mcp_client_deepseek.py  mcp_client_langchain.py  mcp_client_langchain_chat.py
mcp_demo/server/: weather_server.py
mcp_opensource/: mcp_server.md  mcp_tools.md
(+42 files in other folders)
