[project]
name = "milvus-mcp-server"
version = "0.1.0"
description = "MCP server for retrieving context from a Milvus vector database"
readme = "README.md"
requires-python = ">=3.8,<4.0"
license = "Apache-2.0"
dependencies = [
    "mcp[cli]>=1.4.1",
    "pymilvus>=2.2.8",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
    "sentence-transformers>=2.2.2",
    "uvicorn>=0.23.0",
    "fastapi>=0.100.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"

[project.scripts]
milvus-mcp-server = "milvus_mcp_server.main:main" 